{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 17,
  "lineage": "2a3745b5-8a6e-d803-c107-ad01c8b6b1f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d3ebcbcdf994d267",
            "arn": "arn:aws:ec2:ca-central-1:975050360104:instance/i-0d29ca01286f54978",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d29ca01286f54978",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d368cde1ddea5cb",
            "private_dns": "ip-172-31-5-120.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.120",
            "public_dns": "ec2-3-98-128-84.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.98.128.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ac2e346a3c95ed0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "security_group_terraform_course"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095612b48b4725322",
            "tags": {
              "Name": "EC2 with terraform"
            },
            "tags_all": {
              "Name": "EC2 with terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01dfd4c142e859f67"
            ]
          },
          "dependencies": [
            "aws_security_group.first",
            "data.aws_ami.last_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050360104:security-group/sg-01dfd4c142e859f67",
            "description": "terraform first resource created ever",
            "egress": [],
            "id": "sg-01dfd4c142e859f67",
            "ingress": [],
            "name": "security_group_terraform_course",
            "name_prefix": "",
            "owner_id": "975050360104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-course"
            },
            "tags_all": {
              "Name": "terraform-course"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e02fd5ddfd62e2d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:975050360104:security-group/sg-0d31603ca683267db",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0d31603ca683267db",
            "ingress": [],
            "name": "web-server-sg-20240713104116525500000001",
            "name_prefix": "web-server-sg-",
            "owner_id": "975050360104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09e02fd5ddfd62e2d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3904498227",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d31603ca683267db",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1279050752",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d31603ca683267db",
            "security_group_rule_id": "sgr-0fe72800af1307a99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1283408054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d31603ca683267db",
            "security_group_rule_id": "sgr-0721ebab16e88e7f6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg.module.sg.aws_security_group.this",
            "module.web_server_sg.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}